--- a/SAO-EP/Src/EditorState/ApprovalDraft.editorstate.json
+++ b/SAO-EP/Src/EditorState/ApprovalDraft.editorstate.json
@@ -133,7 +133,7 @@
         {
           "Category": "Data",
           "PropertyName": "Text",
-          "RuleProviderType": "Unknown"
+          "RuleProviderType": "User"
         },
         {
           "Category": "Design",
@@ -2628,7 +2628,7 @@
         {
           "Category": "Data",
           "PropertyName": "BasePaletteColor",
-          "RuleProviderType": "Unknown"
+          "RuleProviderType": "User"
         },
         {
           "Category": "Design",
