--- a/SAO-EP/Src/ApprovalDraft.fx.yaml
+++ b/SAO-EP/Src/ApprovalDraft.fx.yaml
@@ -135,8 +135,9 @@
                     "'Adviser Approval Status' As Text":
                         DisplayMode: =DisplayMode.Edit
                         Height: =32
-                        Text: |
-                            =Text(LookUp('Approvals History', 'APF ID'.Value = Text(ThisItem.ID)).'Adviser Approval'.Value)
+                        Text: |-
+                            =// Text(LookUp('Approvals History', 'APF ID'.Value = Text(ThisItem.ID)).'Adviser Approval'.Value)
+                            Last(Filter('Approvals History', 'APF ID'.Value = Text(ThisItem.ID))).'Adviser Approval'.Value
                         Width: =116
                         X: =419
                         Y: =34
@@ -145,7 +146,7 @@
                     "'SAO Head Approval Status' As Text":
                         DisplayMode: =DisplayMode.Edit
                         Height: =32
-                        Text: =Text(LookUp('Approvals History', 'APF ID'.Value = Text(ThisItem.ID)).'SAO Head Approval'.Value)
+                        Text: =Last(Filter('Approvals History', 'APF ID'.Value = Text(ThisItem.ID))).'SAO Head Approval'.Value
                         Width: =116
                         X: =662
                         Y: =34
@@ -173,6 +174,15 @@
                         X: =409
                         Y: =0
                         ZIndex: =12
+
+                    TextCanvas2 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        Text: =ThisItem.ID
+                        Width: =96
+                        X: =7
+                        Y: =0
+                        ZIndex: =13
 
                 FormTitleText1 As Text:
                     Align: ='TextCanvas.Align'.End
