--- a/SAO-EP/Src/App.fx.yaml
+++ b/SAO-EP/Src/App.fx.yaml
@@ -1,7 +1,42 @@
 App As appinfo:
     BackEnabled: =true
+    Formulas: |-
+        =// Set theme colors for light mode
+        PrimaryColor = RGBA(255, 255, 255, 1); // White
+        PrimaryColor_Text = RGBA(9, 15, 37, 1); // Dark blue
+        
+        AccentColor = RGBA(254, 189, 47, 1); // Accent color (yellow)
+        AccentColor_Text = RGBA(254, 189, 47, 1); // Same as accent color for text
+        
+        TertiaryColor = RGBA(244, 244, 244, 1); // Light gray
+        TertiaryColor_Text = RGBA(16, 25, 50, 1); // Dark blue
+        
+        PrimaryTextColor = RGBA(37, 52, 100, 1); // Dark blue
+        PrimaryTextColor_Text = RGBA(37, 52, 100, 1); // Same as primary text color
+        
+        SecondaryTextColor = RGBA(115, 131, 176, 1); // Gray
+        SecondaryTextColor_Text = RGBA(115, 131, 176, 1); // Same as secondary text color
+        
+        AccentTextColor = RGBA(22, 25, 39, 1); // Dark gray
+        AccentTextColor_Text = RGBA(22, 25, 39, 1); // Same as accent text color
+        
+        HighlightColor = RGBA(215, 219, 230, 1); // Light gray for highlights
+        HighlightColor_Text = RGBA(215, 219, 230, 1); // Same as highlight color
+        
+        varHoverFill = RGBA(255, 255, 255, 0.1); // Slight white hover effect
+        varPressedFill = RGBA(0, 0, 0, 0.2); // Slight dark press effect
+        
+        //set icons
+        customIcons = Table(
+            {
+                IconName: "Home_Button",
+                IconData: "<svg xmlns='http://www.w3.org/2000/svg' width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
+          <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4z"/>
+        </svg>"
+            }
+        )
     StartScreen: =
-    Theme: =PowerAppsTheme
+    Theme: =
 
     Host As hostControl.DefaultHostControlVariant:
         OnCancel: =false
