--- a/SAO-EP/Src/EditorState/App.editorstate.json
+++ b/SAO-EP/Src/EditorState/App.editorstate.json
@@ -62,7 +62,7 @@
         {
           "Category": "Design",
           "PropertyName": "Theme",
-          "RuleProviderType": "User"
+          "RuleProviderType": "Unknown"
         },
         {
           "Category": "ConstantData",
