--- a/SAO-EP/Src/App.fx.yaml
+++ b/SAO-EP/Src/App.fx.yaml
@@ -36,7 +36,7 @@ App As appinfo:
             }
         )
     StartScreen: =
-    Theme: =
+    Theme: =PowerAppsTheme
 
     Host As hostControl.DefaultHostControlVariant:
         OnCancel: =false
